# 1688sync

./: .dockerignore  .env.dev  .env.example  .env.prod  .gitignore  API-SUMMARY.md  CLAUDE.md  CRAWLER_README.md  CRAWLER_SUMMARY.md  DEPLOYMENT_README.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.prod  LICENSE  MONITORING_IMPLEMENTATION.md  Makefile  PERFORMANCE_OPTIMIZATION.md  README-API.md  README.md  cli.py  docker-compose.prod.yml  docker-compose.yml  example_usage.py  monitoring_config.json  performance_test_report.json  pyproject.toml  requirements-api.txt  requirements.txt  run_api.py  scrapy.cfg  setup.py  simple_api_test.py  start_with_monitoring.py  test_api.py  test_crawler.py  test_performance.py  test_simple.py
.claude/prds/: 1688sync.md
config/: cli.yaml  cli_config.py  database.py  settings.py
config/logrotate/: 1688sync
config/mysql/: my.cnf  my.cnf.prod
config/nginx/: nginx.conf
config/redis/: redis.conf  redis.conf.prod
docs/: QUEUE_SYSTEM.md  data_processing_pipeline.md
docs/deployment/: CHECKLIST.md  DEPLOYMENT.md  QUICK_START.md
examples/: data_processing_example.py  queue_example.py  storage_usage.py
migrations/: alembic.ini  env.py
migrations/versions/: 001_initial_schema.py
monitoring/: alert_rules.yml  prometheus.yml
scripts/backup/: backup.sh  cron-backup.sh  crontab.example  restore.sh
src/: __init__.py  config.py
tests/: test_data_processing.py  test_database.py
web-dashboard/: .env.example  DEVELOPMENT_SUMMARY.md  README.md  package-lock.json  package.json  package.json scripts section update
(+151 files in other folders)
